# esp32-mcp

./: .gitignore  LICENSE  README.md
src/esp32/: platformio.ini
src/esp32/data/: config.json
src/esp32/include/: BuzzerController.h  LEDController.h  TopicHandler.h
src/esp32/lib/BuzzerController/: BuzzerController.cpp  BuzzerController.h
src/esp32/lib/ConfigLoader/: ConfigLoader.cpp  ConfigLoader.h
src/esp32/lib/LEDController/: LEDController.cpp  LEDController.h
src/esp32/lib/MQTTClient/: MQTTClient.cpp  MQTTClient.h
src/esp32/lib/OTAHandler/: OTAHandler.cpp  OTAHandler.h
src/esp32/lib/TopicHandlerRegistry/: TopicHandlerRegistry.cpp  TopicHandlerRegistry.h
src/esp32/lib/WiFiManager/: WiFiManager.cpp  WiFiManager.h
src/esp32/src/: main.cpp
src/esp32/src/handlers/: BuzzerController.cpp  LEDController.cpp
src/mcp-server/: README.md  config.json  pyproject.toml
src/mcp-server/src/: emqx_mcp_server.py  emqx_mcp_tools.py  main.py
src/mcp-server/src/utils/: config_loader.py  path_helper.py
